# Mini-BookedAI-sdk

./: .gitignore  CHANGELOG.md  DARK_MODE_IMPLEMENTATION_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  mem0_proxy.py  railway-graph.json
bookedai-ui/: package-lock.json  package.json
graph/: .gitignore  10  Dockerfile  README.md  docker-compose.yml  env.example  langgraph.json  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  requirements.txt
graph/docs/: UI_MESSAGE_LOGIC.md
graph/mcp_adapter/: Oauth.py  Server.py  Server_F.py
graph/mcp_adapter/auth/: __init__.py  clerk_oauth.py  endpoints.py  mcp_auth.py  middleware.py
graph/src/: config.py  server.py
graph/src/agent/: graph.py  ui.tsx
graph/src/auth/: fake_auth.py
graph/src/duffel_client/: __init__.py  client.py
graph/src/duffel_client/endpoints/: __init__.py  flights.py  payments.py  stays.py
graph/src/duffel_client/models/: __init__.py  common.py  flights.py  stays.py
graph/src/models/: user.py
mcps/mcp_duffel_flights/: CURSOR_SETUP.md  Cargo.toml  README.md  config.example
mcps/mcp_duffel_flights/src/: main.rs
mcps/mcp_duffel_stays/: .gitignore  CURSOR_SETUP.md  Cargo.toml  README.md  config.example
mcps/mcp_duffel_stays/src/: main.rs
ui/: .gitignore  CLERK_IMPLEMENTATION_SUMMARY.md  CLERK_SETUP.md  env.example  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  railway.json  server.js  server.mjs  vite.config.js
ui-widgets/: build-all.mjs  package-lock.json  package.json  vite.config.js
ui-widgets/src/flight-card/: index.jsx  (+1 more)
ui/src/: middleware.ts
(+30 files in other folders)
